--- a/git.html
+++ b/git.html
@@ -4,7 +4,7 @@
     <title> Document </title>
 </head>
 <body>
-    <h1> hello www  </h1>
+    <h1> hello world  </h1>
     <h1>hai</h1>
     <p>jghgkjgdgdf</p>
     <p>vfdbvfkdk</p>
